tests/NormalTests/paczka1/fuzzy1/79351202.err
Error in line 4: 4YYiLU S610 9,4
Error in line 9: S915 S804 44,8
Error in line 18: 1Hlo5xF S610 48,7
Error in line 14: S915 S610 44,3
Error in line 23: ZrjfqQxb S915 48,9
Error in line 11: RtlD4uD2p S25 27,3
